# revolute-firmware-ci

./: .gitignore  CMakeLists.txt  Kconfig  Makefile  OTA_prj.conf  OTAprj.conf  README.md  VERSION  app.overlay  development.conf  prj.conf  revoluteGyro.py  sysbuild.conf  west.yml
.cache/clangd/index/: hid_usage.h.E8EAFF42F081B784.idx  hid_usage_pages.h.65A704108921964E.idx  main.c.06D2CDB2FA69B0E8.idx
.github/workflows/: ci.yml  githubci.yml
app/: sample.yaml
app/src/: CMakeLists.txt
boards/arm/revolute/: revolute.dts
boards/arm/revolutewireless/: Kconfig  Kconfig.defconfig  revolutewireless.dts  revolutewireless.yaml  (+1 more)
boards/revolutewireless/: Kconfig.defconfig  Kconfig.revolutewireless  board.yml  revolutewireless-pinctrl.dtsi  revolutewireless.dts  revolutewireless_defconfig
boards/revopod/: Kconfig.defconfig  Kconfig.revopod  board.cmake  board.yml  revopod-pinctrl.dtsi  revopod.dts  revopod.yaml  revopod_defconfig
boards/testboard/: Kconfig.defconfig  Kconfig.testboard  board.yml  revolutewireless.yaml  testboard.dts
boards/tong/: index.rst
keys/: tong.pem
src/: CMakeLists.txt  batterylevel.h  batterylvl.c  batterylvl.h  batteylevel.c  ble.c  ble.cstnst  ble.h  ble.hsetr  button.c  button.h  debug.c  debug.h  gpio.c  gpio.h  hid_usage.h  hid_usage_pages.h  hog.c  hog.h  hogsvc.c  i2c.c  i2c.h  lbs.c  led.c  led.h  magnetic.c  magnetic.h  main.c  power.c  power.h  pwmled.c  pwmled.h  revsvc.c  revsvc.h  sensor_poll.c  sensor_poll.h  settings.c  settings.h
src/trash/: batterylevel.c  ble.c  sensor_poll.c
sysbuild/: mcuboot.conf
(+5 files in other folders)
